Bug 1404134 - Drop assertion that can be hit mid-unbind. r=heycam, a=ritu

On that test-case we have something like:

  <body restyle-root>
    <element dirty-descendants>
      <element-2>
    </element>
  </body>

If we change the state of element-2 after unbinding the <body>, which clears the
body's flags, but not the children's flags, there'll be no restyle root, even
though our parent has the relevant flags anyway.

This doesn't compromise correctness in any way, so I'd rather drop the assertion
that shuffle a bunch of stuff so it holds.

MozReview-Commit-ID: KFVTkXclKST